crates/pina_cli/tests/snapshots/explain_command__explain_unknown_discriminator_json.snap
---
source: crates/pina_cli/tests/explain_command.rs
assertion_line: 70
expression: document
---
{
  "accounts": [
    {
      "absent": false,
      "address": "9hSR6S7WPtxmTojgo6GG3k4yDPecgJY292j7xrsUGWBu",
      "field": null,
      "index": 0,
      "signer": true,
      "writable": false
    }
  ],
  "candidates": [
    {
      "accountIndex": null,
      "confidence": "confirmed",
      "field": null,
      "location": null,
      "logConfirmed": false,
      "reason": "the data starts with discriminator 9, which no instruction of `validation_program` declares",
      "rule": "instruction discriminator",
      "scope": "instruction"
    }
  ],
  "errorSites": [],
  "failure": {
    "cpi": null,
    "error": {
      "code": null,
      "description": null,
      "kind": "builtin",
      "name": "InvalidInstructionData"
    },
    "instruction": null,
    "instructionIndex": 0,
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn",
    "targetsProgram": true
  },
  "logs": [
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn invoke [1]",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn consumed 36 of 200000 compute units",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn failed: invalid instruction data"
  ],
  "notes": [],
  "program": {
    "name": "validation_program",
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn"
  },
  "schemaVersion": 1,
  "signature": "CAy8mQuAggWA89zSDZVfveRtVjCeryevHKcLUAASRKDjhXMZvURULeDfGajUdjz7vQyVt5mxdDhbH7wFTnKEAqY",
  "slot": 68,
  "source": "file",
  "status": "failed"
}
