crates/pina_cli/tests/snapshots/explain_command__explain_wrong_owner_json.snap
---
source: crates/pina_cli/tests/explain_command.rs
assertion_line: 71
expression: document
---
{
  "accounts": [
    {
      "absent": false,
      "address": "9hSR6S7WPtxmTojgo6GG3k4yDPecgJY292j7xrsUGWBu",
      "field": "authority",
      "index": 0,
      "signer": true,
      "writable": false
    },
    {
      "absent": false,
      "address": "GmaDrppBC7P5ARKV8g3djiwP89vz1jLK23V2GBjuAEGB",
      "field": "policy",
      "index": 1,
      "signer": false,
      "writable": false
    },
    {
      "absent": false,
      "address": "EdmxWPmx2WH6WgFfTdu9xfkYf3k1g5wD1zccTVySEEh1",
      "field": "audit",
      "index": 2,
      "signer": false,
      "writable": true
    },
    {
      "absent": false,
      "address": "11111111111111111111111111111111",
      "field": "system_program",
      "index": 3,
      "signer": false,
      "writable": false
    }
  ],
  "candidates": [
    {
      "accountIndex": 1,
      "confidence": "possible",
      "field": "policy",
      "location": "src/lib.rs:217",
      "logConfirmed": false,
      "reason": "the check reads account state; pass --network or --rpc-url to check it against the current state",
      "rule": "owner = ID",
      "scope": "account"
    },
    {
      "accountIndex": 1,
      "confidence": "possible",
      "field": "policy",
      "location": "src/lib.rs:275",
      "logConfirmed": false,
      "reason": "the account type check reads the account's data at runtime",
      "rule": "load_pda()",
      "scope": "account"
    }
  ],
  "errorSites": [],
  "failure": {
    "cpi": null,
    "error": {
      "code": null,
      "description": null,
      "kind": "builtin",
      "name": "InvalidAccountOwner"
    },
    "instruction": {
      "accountsStruct": "CheckAccounts",
      "name": "check_policy",
      "rustName": "CheckPolicyInstruction"
    },
    "instructionIndex": 0,
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn",
    "targetsProgram": true
  },
  "logs": [
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn invoke [1]",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn consumed 83 of 200000 compute units",
    "Program GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn failed: Invalid account owner"
  ],
  "notes": [],
  "program": {
    "name": "validation_program",
    "programId": "GKYaKKaAJvuzkH2GKkaEFAqESh9NEobZ3V2Ub7qbpVYn"
  },
  "schemaVersion": 1,
  "signature": "SEnp7rjf92RcHSmLcNGCjrC4bwEQzdz5wx6KqHRLPEfwKLmWfRGumha5oLTBoCWTsugkeHpGgs9nUnzZj5h5xKV",
  "slot": 5268,
  "source": "file",
  "status": "failed"
}
